[package]
name = "r_mathlib"
description = "Contains fix to bindgen error in r_stats crate."
version = "0.1.0"
authors = ["Robin Paul <robin.paul@stjude.org>"]
edition = "2018"
license = "GPL-2.0-or-later"
categories = ["mathematics"]
keywords = ["statistics", "stats", "r", "nmath", "quantile"]
repository = "https://github.com/robinpaul85/r_stats"

[build-dependencies]
cc = "1.0.54"
bindgen = "0.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

